# gripper_control

./: .gitignore  README.md  \
arduino/: CMakeLists.txt  package.xml
arduino/ArduinoSketch/: ArduinoSketch.ino  commands.h  pinout.h
arduino/ArduinoSketch/Ethernet/docs/: api.md  readme.md
arduino/ArduinoSketch/Ethernet/examples/AdvancedChatServer/: AdvancedChatServer.ino
arduino/ArduinoSketch/Ethernet/examples/BarometricPressureWebServer/: BarometricPressureWebServer.ino
arduino/ArduinoSketch/Ethernet/examples/ChatServer/: ChatServer.ino
arduino/ArduinoSketch/Ethernet/examples/DhcpAddressPrinter/: DhcpAddressPrinter.ino
arduino/ArduinoSketch/Ethernet/examples/DhcpChatServer/: DhcpChatServer.ino
arduino/ArduinoSketch/Ethernet/examples/LinkStatus/: LinkStatus.ino
arduino/ArduinoSketch/Ethernet/examples/PagerServer/: PagerServer.ino
arduino/ArduinoSketch/Ethernet/examples/TelnetClient/: TelnetClient.ino
arduino/ArduinoSketch/Ethernet/examples/UDPSendReceiveString/: UDPSendReceiveString.ino
arduino/ArduinoSketch/Ethernet/examples/UdpNtpClient/: UdpNtpClient.ino
arduino/ArduinoSketch/Ethernet/examples/WebClient/: WebClient.ino
arduino/ArduinoSketch/Ethernet/examples/WebClientRepeating/: WebClientRepeating.ino
arduino/ArduinoSketch/Ethernet/examples/WebServer/: WebServer.ino
arduino/ArduinoSketch/Ethernet/src/: Dhcp.cpp  Dhcp.h  Dns.cpp  Dns.h  Ethernet.cpp  Ethernet.h  EthernetClient.cpp  EthernetServer.cpp  EthernetUdp.cpp  EthernetUdp.h  socket.cpp
arduino/ArduinoSketch/Ethernet/src/utility/: w5100.cpp  w5100.h
arduino/action/: Calibrate.action  Gripper.action  Home.action  MoveXYZ.action
arduino/include/arduino/: arduino_node.hpp  commands.h  serial_port.hpp
arduino/launch/: arduino.launch.py
arduino/msg/: Status.msg
arduino/src/: arduino_node.cpp  serial_port.cpp
arduino/srv/: GetStatus.srv
gigatino/: diff1  diff2  diff3  fake_gigatino.py  m4_linker_script.ld  m4_linker_script_d2.ld  m4_linker_script_sram3.ld  m7_linker_script.ld  m7_linker_script_d2.ld  m7_linker_script_sram3.ld  platformio.ini  s_curve.py  test_ethernet.py
gigatino/lib/robotino_hat/: README.md
gigatino/lib/robotino_hat/config/: pid_config.h  pinout.h  s_controller_config.h  servo_config.h  stepper_config.h
gigatino/lib/robotino_hat/pid_controller/: pid_controller.cpp  pid_controller.h
gigatino/lib/robotino_hat/s_controller/: s_controller.cpp  s_controller.h
gigatino/lib/robotino_hat/servos/: servos.cpp  servos.h
gigatino/lib/robotino_hat/stepper_motors/: stepper_motors.cpp  stepper_motors.h
gigatino/lib/robotino_hat/timer_setup/: README.md  common.h  timer_setup.cpp  timer_setup.h
gigatino/lib/shared_mem_data/: shared_mem_data.cpp  shared_mem_data.h
gigatino/src/: ethernet_m4.cpp  main_giga_r1_m4_rpc.cpp  main_giga_r1_m7_rpc.cpp
gigatino_msgs/: CMakeLists.txt  package.xml
gigatino_msgs/action/: Calibrate.action  Gripper.action  Home.action  Move.action
gigatino_msgs/msg/: Feedback.msg  Status.msg  StatusCode.msg
gigatino_ros/: CMakeLists.txt  README.md  package.xml
gigatino_ros/include/gigatino_ros/: gigatino_ros.hpp
gigatino_ros/launch/: launch.py
gigatino_ros/params/: config.yaml  gripper_tfs.yaml
gigatino_ros/scripts/: gigatino_mockup.py  test_ethernet.py
gigatino_ros/src/: gigatino_ros.cpp
gripper_msgs/: CMakeLists.txt  README.md  package.xml
gripper_msgs/action/: Gripper.action
gripper_tf_simulator/: README.md  package.xml  setup.cfg  setup.py
gripper_tf_simulator/gripper_tf_simulator/: __init__.py  dyn_tf_gripper.py  dyn_tf_gripper_x_ori.py  dyn_tf_gripper_y_ori.py  dyn_tf_gripper_yaw.py  dyn_tf_gripper_z_ori.py  gripper_action_client.py  gripper_action_server.py  static_tf_gripper_origin.py
gripper_tf_simulator/launch/: action.launch.yaml  gripper_tf.launch.py  test_tf.launch.py
tim_package/: package.xml  setup.cfg  setup.py
tim_package/tim_package/: tim.py
