<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gripper_tf_simulator</name>
  <version>0.1.1</version>
  <description>Publisher of the dyn tf for the new gripper</description>
  <maintainer email="zhen-yan.khaw@alumni.fh-aachen.de">Zhen yan Khaw</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>tf2_ros_py</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>gripper_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
